+ #96 Add logout method
+ #98 Support promises as alternative to callbacks
- Drop support for undocumented API methods
+ Add security check hasOwnProperty
+ #110 Add support for Collections API
+ Transform codebase to EcmaScript 7
+ #25 Add unit testing suite
+ Add POST statuses/unretweet/:id
+ #116 Update GET statuses/oembed with new endpoint
+ Support POST media/upload with media_data base64

2.6.0 (2015-04-08)
+ Allow to get the supported API methods as array
- #79 Use POST for users/lookup and statuses/lookup, params may get too long for GET
- #81 Special oauth_ methods: Fix force_login parameter

2.5.0 (2014-06-23)
+ #24 Add README section about xAuth
+ #46 Don't force to send base64 media uploads via proxy
+ #23 Support internal API methods
+ #50 Current rate sent back with each call
+ Support custom timelines beta API
- Remove POST geo/place API method, deprecated
+ #52 Don't use proxy for non-browser environments
- #49 Places & Geo API call issue
+ #53 Support AMD module definition syntax
+ #54 Integrate sha1 hash library
+ Add NPM package.json
- #55 Typo in _clone function
- #57 Fix XHR in Safari
+ Add new API methods
+ #60 Multiple media per tweet
+ #66 Support Titanium
- #71 Return rate-limiting info only if contained in response
- #72 Don't require consumer key if bearer token is already known

2.4.3 (2013-07-24)
- #31 HTTP error on multiple oauth_requestToken calls
- #30 HTML-escaping typo in readme code sample

2.4.2 (2013-07-09)
- #21 Typo extra bracket in readme sample code
- #27 Array bad behavior in iOS

2.4.1 (2013-06-23)
+ Pass JSHint validation
+ #15 Allow to assign custom proxy address
- #19 API parameters with escaped characters fail in IE7-9

2.4.0 (2013-06-15)
+ Support multipart file uploads
- Drop unnecessary media format settings ported from PHP getimagesize
- Don't unintendedly overwrite global "url" variable
+ Add contributing guidelines

2.3.3 (2013-05-31)
- oauth2_token doesn't respect _useProxy CORS setting