@@ -502,9 +502,7 @@
           throw "ActiveXObject object not defined.";
         }
         // now, consider RequireJS and/or Node.js objects
-      } else if (typeof require === "function"
-        && require
-        ) {
+      } else if (typeof require === "function") {
         var XMLHttpRequest;
         // look for xmlhttprequest module
         try {
